fixed icons alignment

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -51,9 +51,12 @@
             min-height: 350px;
             padding-top: 15%;
             @media screen and (max-width: 423px) {
-                .icons{
-                    padding: 0px !important;
+                // .icons{
+                //     padding: 0px !important;
                     
+                // }
+                .icons{
+                    text-align: center;
                 }
                 .card-title{
                     text-align: center;
